sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:4: error: not found: value counter
  while (counter < 96){
         ^